{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "681f9391-c1dd-4c1a-b527-a63ea72a9999",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "3b8f9a4c-e4ec-4e00-8293-0ab8b485b9d1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MeleeAttack",
                    "type": "Button",
                    "id": "73e6bb14-270e-46eb-8d3a-9a64c3d030dd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "RangeAttack",
                    "type": "Button",
                    "id": "2d43b6e2-961a-4d1e-ba2e-0610549814ae",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "64b033c8-9014-4845-97da-2cbc5e375841",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenPhone",
                    "type": "Button",
                    "id": "5a418573-aa2b-42fd-8680-84421fc8d102",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a4fb2962-e6c7-4cd2-89c2-cb27dc8a991c",
                    "path": "<DualShockGamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "654b136c-28d8-4ec2-b4a5-5a97e3f6b12c",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f04a1b43-3839-4156-ba99-d27981da7477",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4709c67e-2dca-4a8f-b294-7811f706e611",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MeleeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c06fa0f-f323-4818-9984-4bed64df07af",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RangeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "32a8572e-e613-4d24-95a0-fe7119817806",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RangeAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4c524996-b953-4435-acb1-4a3a1a853d73",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "877b810f-59e8-4124-8c3f-d425ae836614",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a05ca536-cb53-4bab-8968-8c833437ad3f",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenPhone",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c099073-a4d3-48eb-b625-7a245bc1bf3e",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenPhone",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}